<resources>
    <string name="app_name">AppHomework02</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_multiply">*</string>
    <string name="key_toShare">/</string>
    <string name="key_addition">+</string>
    <string name="key_subtraction">-</string>
    <string name="key_result">=</string>
</resources>